# assignment-2-Abdelrahman-Elnahrawy

assignments/assignment2/: fileresult.txt
conf/: username.txt
examples/autotest-validate/: autotest-validate.c
finder-app/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  finder.sh  test.txt  writer.c  writer.sh
student-test/assignment1/: Test_validate_username.c
